# solana-uniswap-v2

./: README.md
anchor/: Anchor.toml  package-lock.json
anchor/programs/uniswapv2/: Cargo.toml
anchor/programs/uniswapv2/src/: error.rs  event.rs  lib.rs  math.rs
anchor/programs/uniswapv2/src/instructions/: deposit.rs  init_pool.rs  mod.rs  swap.rs  withdraw.rs
anchor/programs/uniswapv2/src/state/: state.rs
anchor/tests/: uniswapv2.ts
backend/: docker-compose.yml  nest-cli.json  package-lock.json  package.json
backend/src/: app.module.ts
backend/src/events/: event-types.ts  events.module.ts  events.service.ts  pool-event.entity.ts
backend/src/events/tests/: events.controller.spec.ts
backend/src/indexer/: indexer.service.ts
backend/src/pools/: pool.entity.ts  pools.controller.ts  pools.module.ts  pools.service.ts
backend/src/pools/tests/: pools.controller.spec.ts  pools.service.spec.ts
backend/src/tokens/: token.entity.ts  tokens.controller.ts  tokens.module.ts  tokens.service.ts
backend/src/tokens/tests/: tokens.controller.spec.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: DepositPanel.tsx  PoolCreator.tsx  PoolList.tsx  SwapPanel.tsx  WalletButton.tsx  WithdrawPanel.tsx
frontend/src/contexts/: AnchorProviderContext.tsx
frontend/src/utils/: anchorClient.ts
scripts/: deposit.ts  initializePool.ts  package.json  tsconfig.json
scripts/utils/: anchorClient.ts
